bin_PROGRAMS = gramdtoolsmake
gramdtoolsmake_SOURCES = gramdtoolsmake.cpp ../common/encoding.cpp ../common/log.cpp

gramdtoolsmake_CPPFLAGS = $(BOOST_CPPFLAGS)
gramdtoolsmake_LDFLAGS = $(BOOST_THREAD_REGEX) $(BOOST_THREADS_LDFLAGS) $(BOOST_SYSTEM_LDFLAGS) $(BOOST_WSERIALIZATION_LDFLAGS) $(BOOST_PROGRAM_OPTIONS_LDFLAGS) \
	$(BOOST_REGEX_LIBS) $(BOOST_THREAD_LIBS) $(BOOST_SYSTEM_LIBS) $(BOOST_WSERIALIZATION_LIBS) $(BOOST_PROGRAM_OPTIONS_LIBS)
